<resources>
    <string name="app_name">OTS</string>
    <string name="title_activity_tasks_list">Tasks</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="logged_in_success">Logged in!</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="new_user">New user? sign up</string>
    <string name="prompt_phone">Phone number</string>
    <string name="sign_up_success">Sign up success!</string>
    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="prompt_team_name">Team name</string>
    <string name="action_create_team">Done</string>
    <string name="action_invite">Send invite</string>
    <string name="prompt_member_email">enter a new member email</string>
    <string name="action_add_member">Add</string>
    <string name="title_activity_create_edit_task">Task Editor</string>
    <string name="prompt_task_name">enter task name</string>
    <string name="select_task_priority">Priority</string>
    <string name="select_task_category">Category</string>
    <string name="prompt_due_date">select a due date</string>
    <string name="select_assignee">Select assignee</string>
    <string name="select_location">Select location</string>
    <string name="task_editor_btn">Save And Send</string>
    <string name="prompt_member_phone">enter a new member phone</string>
    <string name="action_save">Save</string>
    <string name="error_invalid_email">invalid email</string>
    <string name="edit_task_name">Task Name</string>
    <string name="edit_due_date">Due Date</string>
    <string name="error_invalid_task_name">invalid task name</string>
    <string name="error_invalid_due_date">choose a due date</string>
    <string name="title_activity_user_tasks">UserTasksActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_save_member_task">SaveMemberTaskActivity</string>
    <string name="member_category">Category:</string>
    <string name="member_priority">Priority:</string>
    <string name="member_location">Location:</string>
    <string name="member_due_time">Due time:</string>
    <string name="member_accept">Task accept status:</string>
    <string name="member_progress">Task status:</string>
    <string name="camera_btn">Add Photo</string>

    //Fragment logout drawer navigation
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    //Drawer navigation
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Fragment about drawer navigation
    <string name="app_name_about">Project mobile 2016</string>
    <string name="version_about">Version 1</string>
    <string name="names">Liron Sharabi\n\nUriel Chechique\n\nLishay</string>

    //Setting fragment drawer navigation
    <string name="set_time_notification_content_view_setting">Set notification time for new a task</string>
    <string name="button_set_time_setting">Set time</string>
    <string name="task_manager">Task manager</string>

    //Recycle view users
    <string name="text_view_user_email_recycleview">User email</string>
    <string name="text_view_user_phone_recycleview">User phone</string>
    <string name="text_view_user_name_recycleview">User name</string>

    //preferance activity drawer navigation
    <string name="Set_time_notification">Set time notification</string>
    <string name="settings">Settings</string>
    <string name="Enter_new_time_notification">Enter new time notification</string>

</resources>
