<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name_about"
        android:id="@+id/app_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version_about"
        android:id="@+id/version_about"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/names"
        android:id="@+id/names"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp"
        android:textIsSelectable="false"
        android:textAlignment="center" />



</LinearLayout>