<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".SaveTaskActivity"
        tools:showIn="@layout/activity_save_task">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/edit_task_name"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/prompt_task_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/select_task_category"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

        <RadioGroup
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/categoryCleaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Cleaning"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

            <RadioButton
                android:id="@+id/categoryElectricity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Electricity"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

            <RadioButton
                android:id="@+id/categoryComputers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Computers"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

            <RadioButton
                android:id="@+id/categoryGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="General"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

            <RadioButton
                android:id="@+id/categoryOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Other"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/select_task_priority"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

        <RadioGroup
            android:id="@+id/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priorityNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Normal"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

            <RadioButton
                android:id="@+id/priorityUrgent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Urgent"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>

            <RadioButton
                android:id="@+id/priorityLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rbtn_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Low"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textSize="10dp"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/edit_due_date"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose date"/>

            <Button
                android:id="@+id/time"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Time"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/select_assignee"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/assignee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/select_location"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/taskImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:onClick="onResizeClick" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSaveTaskClick"
            android:text="@string/task_editor_btn"
            android:layout_marginTop="5dp"/>


    </LinearLayout>
</ScrollView>